--- a/make_the_batter.ipynb
+++ b/make_the_batter.ipynb
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -39,15 +39,7 @@
         "id": "tF3-WstGIPLy",
         "outputId": "aa407550-ab46-40c6-8052-08751cc4ce02"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "GPU 0: Tesla T4 (UUID: GPU-6ba446f3-b29d-37d7-053b-f5d75fe4d6fb)\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Importing tensorflow and some other libraries\n",
         "import tensorflow as tf\n",
@@ -59,7 +51,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -67,25 +59,7 @@
         "id": "ajfi7tEUIrAq",
         "outputId": "b5350ac2-aea3-49c5-8ed0-5cc37bfb6446"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "--2022-07-04 14:33:49--  https://raw.githubusercontent.com/ishandandekar/What_Am_I_Eating/main/helper_functions.py\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.110.133, 185.199.109.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 1448 (1.4K) [text/plain]\n",
-            "Saving to: ‘helper_functions.py’\n",
-            "\n",
-            "helper_functions.py 100%[===================>]   1.41K  --.-KB/s    in 0s      \n",
-            "\n",
-            "2022-07-04 14:33:49 (13.6 MB/s) - ‘helper_functions.py’ saved [1448/1448]\n",
-            "\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Downloading the helper functions\n",
         "!wget https://raw.githubusercontent.com/ishandandekar/What_Am_I_Eating/main/helper_functions.py\n",
@@ -116,7 +90,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -124,15 +98,7 @@
         "id": "KUJUDniZI5sk",
         "outputId": "d1676fef-ef59-4e33-efc4-e5ef9e9a6291"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Is Food 101 in the dataset catalog: True\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Get the tensorflow-datasets library\n",
         "import tensorflow_datasets as tfds\n",
@@ -198,57 +164,7 @@
         "id": "B-PNOEGNMJlR",
         "outputId": "a7fa6899-b0e0-492d-f27c-6f307cc07788"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "\u001b[1mDownloading and preparing dataset food101/2.0.0 (download: 4.65 GiB, generated: Unknown size, total: 4.65 GiB) to /root/tensorflow_datasets/food101/2.0.0...\u001b[0m\n"
-          ]
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "b88f041fbc3348f0a9dca65942c8c098",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Dl Completed...: 0 url [00:00, ? url/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "42120e3e88694560a59ecc6646fa471a",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Dl Size...: 0 MiB [00:00, ? MiB/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "76b27d4bb0fe4bd99ff5d2d954309642",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Extraction completed...: 0 file [00:00, ? file/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Load in tha data (takes 5-6 minutes in Google Colab)\n",
         "(train_data,test_data),ds_info = tfds.load(name=\"food101\",\n",
@@ -356,7 +272,7 @@
         "id": "prYDcWcAYjPX"
       },
       "source": [
-        "> 💡**Note:** These functions we used `batch` and `prefetch` will help us when we set the model to train. These functions will help us train the model faster. It optimizes the space and complexity immensely."
+        "> 💡**Note:** These functions we used, `batch` and `prefetch` will help us when we set the model to train. These functions will help us train the model faster. It optimizes the space and complexity immensely."
       ]
     },
     {
